--- a/_config_local.yml
+++ b/_config_local.yml
@@ -25,12 +25,13 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://wizidot.github.io/elygestion
-categories:
-  - {name: 'elygestion', description: 'category elygestion', order: "1"}
-  - {name: 'nos actifs gérés', description: 'another category description', order:  "2"}
-  - {name: 'nos mêtiers', description: 'another category description', order: "3"}
-  - {name: 'actualités', description: 'another category description', order:  "4"}
+production_url : http://localhost:4000/
+ELYGESTION :
+  categories:
+    - {name: 'elygestion',title: 'elygestion', description: 'category elygestion', order: 1}
+    - {name: 'nos-actifs-geres',title: 'nos actifs gérés', description: 'another category description', order: 2}
+    - {name: 'nos-metiers',title: 'nos mêtiers', description: 'another category description', order: 3}
+    - {name: 'actualites',title: 'actualités', description: 'another category description', order: 4}
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
 JB :
@@ -68,8 +69,8 @@ JB :
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  #ASSET_PATH : false
-  ASSET_PATH : http://wizidot.github.io/elygestion/assets/themes/bootstrap-3
+  ASSET_PATH : false
+  #ASSET_PATH : http://wizidot.github.io/elygestion/assets/themes/bootstrap-3
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
   #
@@ -84,7 +85,7 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
+    provider : false
     disqus :
       short_name : jekyllbootstrap
     livefyre :
@@ -132,3 +133,7 @@ JB :
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
 
+  tags_list :
+    provider : "custom"
+  categories_list :
+    provider : "custom"
