--- a/_config_local.yml
+++ b/_config_local.yml
@@ -69,7 +69,7 @@ JB :
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  ASSET_PATH : false
+  ASSET_PATH : /assets/themes/bootstrap-3
   #ASSET_PATH : http://wizidot.github.io/elygestion/assets/themes/bootstrap-3
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
