--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://wizidot.github.io/elygestion
+production_url : http://www.elygestion.fr
 ELYGESTION :
   categories:
     - {name: 'elygestion',title: 'elygestion', description: 'category elygestion', order: 1}
