--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://wizidot.github.io/elygestion
+production_url : http://www.elygestion.fr
 ELYGESTION :
   categories:
     - {name: 'elygestion',title: 'elygestion', description: 'category elygestion', order: 1}
@@ -59,7 +59,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : http://wizidot.github.io/elygestion
+  BASE_PATH : http://www.elygestion.fr
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
@@ -70,7 +70,7 @@ JB :
   #   /assets
   #
   #ASSET_PATH : false
-  ASSET_PATH : http://wizidot.github.io/elygestion/assets/themes/bootstrap-3
+  ASSET_PATH : http://www.elygestion.fr/assets/themes/bootstrap-3
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
   #
@@ -102,17 +102,17 @@ JB :
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
   #
-  analytics :
-    provider : google
-    google :
-        tracking_id : 'UA-123-12'
-    getclicky :
-      site_id :
-    mixpanel :
-        token : '_MIXPANEL_TOKEN_'
-    piwik :
-        baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
-        idsite : '1'                   # the id of the site on Piwik
+  #analytics :
+  #  provider : google
+  #  google :
+  #      tracking_id : 'UA-123-12'
+  #  getclicky :
+  #    site_id :
+  #  mixpanel :
+  #      token : '_MIXPANEL_TOKEN_'
+  #  piwik :
+  #      baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
+  #      idsite : '1'                   # the id of the site on Piwik
 
   # Settings for sharing helper.
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
